# diff_equations

./: .gitignore  Cargo.toml  generate_video.sh
opencl/: mandelbrot.c  node_force.c  test.c  texture_shader.c
src/: gui.rs  lib.rs  main.rs  spring.rs
src/electronics/: components.rs  mod.rs  statics.rs
src/physics/: mod.rs  soft_body.rs  speeed.rs
