[package]
name = "diff_equations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["texture-rendering", "node-point-rendering"]#, "single-step"]

conservation-of-energy = []# Don't use
spring-energy = []# Don't use
node-point-rendering = []
texture-rendering = []
single-step = []
local-relative-velocity-averaging = []# Don't use

[dependencies]
serde = {version = "1.0.195", features = ["derive"]}
bevy = "0.12.1"
image = "0.24.7"
nalgebra = "0.32.3"
approx = "0.5.1"# Approximate float comparisons, for tests
geo = "0.27.0"